# NPCs-Names-Distributor-NG

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: CLIBNGPlugin.cmake
docs/: nexus-description.md
include/: PCH.h
src/: Distributor.cpp  Hooks.cpp  Hotkeys.cpp  NameDefinitionDecoder.cpp  main.cpp
